2011-04-08  Tim marston <edam@waxworlds.org>

	* version.sh: updated to 2.8.5

2011-02-24  Tim Marston <edam@waxworlds.org>

	* version.sh: updated to 2.8.4
	* cleaned up various ChangeLogs, removed duplicate entries

2008-05-29  Paul Goins  <general@vultaire.net>

	* version.sh: Updated to 2.8.1, bug fix release.
	* Makefile.am: Added dist_bin_SCRIPTS line for typefortune, since it
	  was being distributed but not properly installed in the 2.8 release.
	  (Bug reported by Christian "naddy" Weisgerber.)  Also removed an
	  extra reference to conf_dos.bat.in.

2008-05-27  Paul Goins  <general@vultaire.net>

	* version.sh: Updated to 2.8.

2008-05-15  Paul Goins  <general@vultaire.net>

	* configure.ac: Renamed from configure.in.  Added nl and zh_CN
	  translations to ALL_LINGUAS.  Made several other minor
	  autoconf-related updates.

2008-05-14  Paul Goins  <general@vultaire.net>

	* version.sh: Updated to 2.8-pre2.
	* INSTALL.in: Added build instructions for Windows NT/2000/XP.
	* conf_dos.bat.in: Created a new file for the old DOS-style batch file.
	* autogen.sh, Makefile.am: Added conf_dos.bat

2008-05-12  Paul Goins  <general@vultaire.net>

	* NEWS: Updated for 2.8.
	* README: Added Windows XP as a tested OS.
	* README.CVS: Updated recommended automake version.
	* THANKS: Updated.

2008-05-06  Paul Goins  <general@vultaire.net>

	* version.sh: Updated version for first pre-release of 2.8.

2008-05-04  Paul Goins  <general@vultaire.net>

	* src/gtypist.c: Updated to support MinGW.  Also, added a do_beep
	  function to call MessageBeep under Windows and putchar( ASCII_BELL )
	  otherwise.
	* configur.bat.in: Added support for building via MinGW.  Updated DJGPP
	  Makefile since source files are now in the "src" folder.
	  (NOTE: This batch file may not work on DOS or Win9x, since it uses
	  "set /p" which is a Windows NT-specific command.)
	* TODO: Removed one completed item, added one user idea.

2008-05-02  Paul Goins  <general@vultaire.net>
